@@ -4,6 +4,7 @@
 #include "TcpServer.h"
 
 #include "..\include\Common.h"
+#include "..\include\Log.h"
 
 
 namespace TcpServerBridge
@@ -13,15 +14,19 @@ namespace TcpServerBridge
 		, m_Password(password)
 		, m_AcceptThread(boost::bind(&TcpServer::accept, this))
 	{
+		Log::shell(Log::Msg_Plus) << "TcpServer start.";
 	}
 
 	TcpServer::~TcpServer()
 	{
 		m_AcceptThread.join();
+
+		Log::shell(Log::Msg_Remove) << "TcpServer end.";
 	}
 
 	void TcpServer::session(socket_ptr sock)
 	{
+		Log::shell(Log::Msg_Information) << "TcpServer session start, from: " << sock->remote_endpoint().address().to_string();
 	}
 
 	void TcpServer::accept()
@@ -31,6 +36,8 @@ namespace TcpServerBridge
 		tcp::acceptor a(io_service, tcp::endpoint(tcp::v4(), m_Port));
 		for(;;)
 		{
+			Log::shell(Log::Msg_Information) << "TcpServer startup at port: " << m_Port << ", password: " << m_Password;
+
 			socket_ptr sock(new tcp::socket(io_service));
 			a.accept(*sock);
 			boost::thread t(boost::bind(&TcpServer::session, this, sock));
